# kepler

./: .gitignore  CHANGELOG.md  MANUAL_USUARIO_KEPLER.md  README.md  SDK_CLI_GUIDE.md  STATUS_AUTONOMO.md  VALIDATION_STATUS.md  pyproject.toml  pytest.ini
.cursor/rules/: context-system.mdc  system-prompt.mdc
docs/: AI_FRAMEWORKS_GUIDE.md  AUTOML_GUIDE.md  CLI_GUIDE.md  CUSTOM_LIBRARIES_GUIDE.md  README.md  SDK_GUIDE.md  VALIDATION_GUIDE.md  VALIDATION_STATUS.md  VERSIONING_GUIDE.md
kepler/: __init__.py  automl.py  cli.py  data.py  deploy.py  libs.py  reproduce.py  results.py  train.py  train_clean.py  train_unified.py  versioning.py
kepler/cli/: __init__.py  main.py
kepler/connectors/: __init__.py  hec.py  splunk.py
kepler/core/: __init__.py  config.py  ecosystem_validator.py  global_config.py  interfaces.py  library_manager.py  project.py  security.py
kepler/deployers/: __init__.py  cloud_run_deployer.py
kepler/trainers/: __init__.py  base.py  deep_learning_trainer.py  sklearn_trainers.py  xgboost_trainer.py
kepler/utils/: data_validator.py  exceptions.py  logging.py  synthetic_data.py
tasks/: prd-kepler-ecosystem.md  tasks-prd-kepler-ecosystem.md
test-lab/: .env.template  .gitignore  README.md  test_lineage_tracking.py  test_release_management.py  test_reproduction_system.py  test_unified_versioning.py
test-lab/lab_data/: production_data.csv  quality_data.csv  sensor_data.csv  splunk_events.json  splunk_metrics.json
test-lab/notebooks/: README.md  events_analysis.ipynb  metrics_analysis_clean.ipynb  temp_fix.py
tests/: __init__.py
tests/integration/: README.md  __init__.py  test_automl_intelligence.py  test_cloud_run_deployment.py  test_custom_library_integration_real.py  test_ecosystem_validation.py  test_multiple_ai_frameworks.py  test_splunk_integration.py  test_unlimited_libraries_integration.py
tests/realistic/: test_end_to_end_workflow.py
tests/unit/: test_ai_framework_coverage.py  test_automl_simple.py  test_cli.py  test_cli_unlimited_ecosystem.py  test_config.py  test_custom_library_integration.py  test_data_validator.py  test_hec_writer.py  test_library_manager.py  test_model_trainers.py  test_project.py  test_splunk_connector.py  test_unified_training_api.py  test_xgboost_integration.py
